@@ -69,6 +69,7 @@ import org.wordpress.android.util.EventBusWrapper
 import org.wordpress.android.util.NetworkUtilsWrapper
 import org.wordpress.android.util.analytics.AnalyticsTrackerWrapper
 import org.wordpress.android.util.analytics.AnalyticsUtils
+import org.wordpress.android.util.extensions.clipboardManager
 import org.wordpress.android.viewmodel.ScopedViewModel
 import org.wordpress.android.viewmodel.SingleLiveEvent
 import org.wordpress.android.viewmodel.helpers.DialogHolder
@@ -535,16 +536,24 @@ class PagesViewModel
         val pageLink = postStore.getPostByLocalPostId(page.localId).link
         try {
             // Copy the link to the clipboard
-            val clipboard = context.getSystemService(Context.CLIPBOARD_SERVICE) as ClipboardManager
+            val clipboard = context.clipboardManager
             val clip = ClipData.newPlainText("${page.localId}", pageLink)
-            clipboard.setPrimaryClip(clip)
-            _showSnackbarMessage.postValue(SnackbarMessageHolder((UiStringRes(R.string.media_edit_copy_url_toast))))
+            if (clipboard != null) {
+                clipboard.setPrimaryClip(clip)
+                _showSnackbarMessage.postValue(SnackbarMessageHolder((UiStringRes(R.string.media_edit_copy_url_toast))))
+            } else {
+                throw NullPointerException("ClipboardManager is not supported on this device")
+            }
         } catch (e: SecurityException) {
             /**
              * Ignore any exceptions here as certain devices have bugs and will fail.
              * See https://crrev.com/542cb9cfcc927295615809b0c99917b09a219d9f for more info.
              */
-            AppLog.e(AppLog.T.PAGES, e)
+            AppLog.e(PAGES, e)
+            _showSnackbarMessage.postValue(SnackbarMessageHolder(UiStringRes(R.string.error)))
+        } catch (e: NullPointerException) {
+            // This exception is thrown above if ClipboardManager is not supported
+            AppLog.e(PAGES, e)
             _showSnackbarMessage.postValue(SnackbarMessageHolder(UiStringRes(R.string.error)))
         }
     }
